test/asm/divzero-section-bank.err
ERROR: divzero-section-bank.asm(1):
    Invalid integer constant
ERROR: divzero-section-bank.asm(1):
    Division by zero
